Users can up and down vote webpages by clicking a plus or a minus button

--- a/siteace.html
+++ b/siteace.html
@@ -69,9 +69,11 @@
 		{{description}}
 	</p>
 	<a href="#" class="btn btn-default js-upvote">
+    {{upvotes}}
 		<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
 	</a>
 	<a href="#" class="btn btn-default js-downvote">
+    {{downvotes}}
 		<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
 	</a>
 	<!-- you will be putting your up and down vote buttons in here! -->
