--- a/siteace.html
+++ b/siteace.html
@@ -9,7 +9,7 @@
   	  <div class="container-fluid">
   	    <div class="navbar-header">
   	      <a class="navbar-brand nav-link" href="/">
-  	        Site Ace
+  	        Social Website Aggregator
   	      </a>
   	    </div>
         <ul class="nav navbar-nav navbar-right">
