--- a/siteace.html
+++ b/siteace.html
@@ -88,7 +88,7 @@
 </template>
 
 <template name="website_details">
-  	<a id="title" href="{{url}}"><h1>{{title}}</h1></a>
+  	<a id="title" href="//{{url}}"><h1>{{title}}</h1></a>
     <br />
     <p class="date">{{date}}</p>
   	<p class="detail-description">
