--- a/siteace.html
+++ b/siteace.html
@@ -37,12 +37,13 @@
 	<a class="btn btn-default js-toggle-website-form" href="#">
   		<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	</a>
-	<div id="website_form" class="hidden_div">
 		<form class="js-save-website-form">
+      <div id="website_url_form" class="hidden_div">
 		  <div class="form-group">
 		    <label for="url">Site address</label>
 		    <input type="text" class="form-control" id="url" placeholder="http://www.mysite.com" required>
-		  </div>
+      </div>
+      <div id="website_form" class="hidden_div">
 		  <div class="form-group">
 		    <label for="title">Title</label>
 		    <input type="text" class="form-control" id="title" placeholder="Mysite">
@@ -51,10 +52,11 @@
 		    <label for="description">Description</label>
 		    <input type="text" class="form-control" id="description" placeholder="I found this site really useful for ...">
 		  </div>
+    </div>
 
 		  <button type="submit" class="btn btn-default">Submit</button>
+      </div>
 		</form>
-	</div>
 </template>
 
 <!-- template that displays several website items -->
