--- a/siteace.html
+++ b/siteace.html
@@ -71,12 +71,16 @@
 <!-- template that displays individual website entries -->
 <template name="website_item">
 <li class="list-group-item">
-	<a href="/details/{{_id}}">{{title}}</a>
+	<a href="//{{url}}">{{title}}</a>
   <br />
   <p class="date">{{date}}</p>
 	<p>
 		{{description}}
 	</p>
+  <a href="/details/{{_id}}">Details
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+  </a>
+  <br />
 	<a href="#" class="btn btn-success js-upvote">
     {{upvotes}}
 		<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
