accounts-ui-bootstrap-3

--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,6 @@
   </head>
 
   <body>
-  	<!-- navbar  - you will be putting the login functions here -->
   	<nav class="navbar navbar-default">
   	  <div class="container-fluid">
   	    <div class="navbar-header">
@@ -13,8 +12,9 @@
   	      </a>
   	    </div>
         <ul class="nav navbar-nav navbar-right">
-          <li class="navbar-text"><span class="glyphicon glyphicon-user"></span>
-            {{> loginButtons align="right"}}</li>
+          <li class="navbar-text">
+            {{> loginButtons align="right"}}
+          </li>
         </ul>
   	  </div>
   	</nav>
