Cleaning code that does adding website automatically by url logic

--- a/client/main.html
+++ b/client/main.html
@@ -41,7 +41,7 @@
       <div id="website_url_form" class="hidden_div">
 		  <div class="form-group">
 		    <label for="url">Site address</label>
-		    <input type="text" class="form-control" id="url" placeholder="http://www.mysite.com" required>
+		    <input type="url" class="form-control" id="url" placeholder="http://www.mysite.com" required pattern="https?://.+">
       </div>
       <div id="website_form" class="hidden_div">
 		  <div class="form-group">
